--- a/src/Para.Server.Business.Test/App.config
+++ b/src/Para.Server.Business.Test/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
@@ -11,4 +11,12 @@
   <connectionStrings>
     <add name="Para" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS2014;Database=Para;Integrated Security=True;MultipleActiveResultSets=True;" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
