cross rate operations

--- a/src/Para.Server.Contract/Para.Server.Contract.csproj
+++ b/src/Para.Server.Contract/Para.Server.Contract.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="Argument\BaseArgument.cs" />
     <Compile Include="Argument\ConvertValueArgument.cs" />
+    <Compile Include="Argument\CurrencyValue.cs" />
     <Compile Include="Argument\GetValueArgument.cs" />
     <Compile Include="Enum\Currency.cs" />
     <Compile Include="Enum\CurrencyValueSource.cs" />
