--- a/src/Para.Server.Host/App.config
+++ b/src/Para.Server.Host/App.config
@@ -4,12 +4,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
   <appSettings>
-    <add key="TcpPort" value="7777" />
+    <add key="ParaServiceBaseAddress" value="net.tcp://localhost:7777/" />
     <!-- timer value as hours -->
     <add key="TimerTick" value="4" />
   </appSettings>
   <connectionStrings>
-    <add name="Para" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS2014;Database=Para;Integrated Security=True;MultipleActiveResultSets=True;" />
+    <add name="Para" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQL2014;Database=Para;Integrated Security=True;MultipleActiveResultSets=True;" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
