--- a/src/Para.Client.Web/Web.config
+++ b/src/Para.Client.Web/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="TcpPort" value="7777"/>
+    <add key="ParaServiceBaseAddress" value="net.tcp://localhost:7777/" />
   </appSettings>
   
   <system.web>
