--- a/src/Para.Server.Business.Test/App.config
+++ b/src/Para.Server.Business.Test/App.config
@@ -7,6 +7,7 @@
     <add key="TcpPort" value="7777" />
     <!-- timer value as hours -->
     <add key="TimerTick" value="4" />
+    <add key="TCBMBaseAddress" value="https://www.tcmb.gov.tr/kurlar/today.xml" />
   </appSettings>
   <connectionStrings>
     <add name="Para" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS2014;Database=Para;Integrated Security=True;MultipleActiveResultSets=True;" />
