--- a/src/Para.Server.Host/App.config
+++ b/src/Para.Server.Host/App.config
@@ -8,6 +8,10 @@
     <!-- timer value as hours -->
     <add key="TimerTick" value="4" />
     <add key="TCBMBaseAddress" value="https://www.tcmb.gov.tr/kurlar/today.xml" />
+    <add key="IsProxy" value="True" />
+    <add key="Proxy" value="http://proxy1.tr152.corpintra.net" />
+    <add key="ProxyPort" value="3128" />
+
   </appSettings>
   <connectionStrings>
     <add name="Para" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQL2016;Database=Para;Integrated Security=True;MultipleActiveResultSets=True;" />
